@@ -1,3 +1,7 @@
+
+20121202:
+	* Update copyright info
+
 20121029:
 	* Updates for modern libpng
 	* Update email addresses and URLs
